# sort_dart

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/sort_dart/: SortDartPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/sort_dart_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: sort_dart.podspec
ios/Classes/: SortDartPlugin.h  SortDartPlugin.m  SwiftSortDartPlugin.swift  native_add.cpp
ios/Classes/src/: sort_dart.cpp  sort_lib.cpp  sort_node.h
lib/: sort_dart.dart
test/: sort_dart_test.dart
